# deep_nao

./: .gitmodules  README.md  requirements.txt
hrs_ws/: README.md
hrs_ws/.devcontainer/: Dockerfile
hrs_ws/src/deep_nao/: CMakeLists.txt  README.md  package.xml
hrs_ws/src/deep_nao/rviz/: tutorial_6.rviz
hrs_ws/src/deep_nao/script/: aruco_marker_subscriber.py  ball_subscriber.py  move2ball.py  move_client.py  move_service.py  perception_ball.py  test.py  test_tactile.py
hrs_ws/src/deep_nao/src/: client.cpp
hrs_ws/src/deep_nao/srv/: MoveJoints.srv
scripts/: acme_pipeline.py  convert_mjcf_to_xml.py  nao_robot.py
